--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "0.1.0",
     "devDependencies": {
         "serverless-domain-manager": "^7.3.8",
+        "serverless-dotenv-plugin": "^6.0.0",
         "serverless-iam-roles-per-function": "^1.0.4",
         "serverless-prune-plugin": "^2.0.2",
         "serverless-python-requirements": "^6.0.1"
