--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,5 @@
 service: qwoted-automation
-frameworkVersion: ">=3.38.0 <4.0.0"
+frameworkVersion: ">4.0.0"
 
 custom: ${file(resources/customs.yml)}
 
@@ -184,3 +184,4 @@ plugins:
   - serverless-iam-roles-per-function
   - serverless-domain-manager
   - serverless-prune-plugin
+  - serverless-dotenv-plugin
